# sports_api

./: pyproject.toml
src/app/common/: logger.py
src/app/core/: config.py  path_config.py
src/app/database/: db_base.py
